# plutus-nftree

./: Dockerfile  README.md  docker-compose.yml  nftree.cabal  pure_hs.hs
src/: cabal.project  hie.yaml
src/Nftree/: Contract.hs  test.hs
